--- a/results/00_dmethr_pipeline.Rmd
+++ b/results/00_dmethr_pipeline.Rmd
@@ -39,16 +39,25 @@ prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reduc
 # Step 3: Activation in demethylating context
 
 
-```{r child="03_da_GSE45332.Rmd"}
+```{r child="03_da_GSE45332.Rmd", eval=TRUE}
 ```
 
-```{r child="03_da_GSE5816.Rmd"}
+```{r child="03_da_GSE5816.Rmd", eval=TRUE}
 ```
 
-```{r child="03_da_summary.Rmd"}
+```{r child="03_da_GSE14315.Rmd", eval=FALSE}
 ```
 
-```{r child="04_results.Rmd"}
+```{r child="03_da_GSE25427.Rmd", eval=FALSE}
+```
+
+```{r child="03_da_summary.Rmd", eval=FALSE}
+```
+
+
+
+
+```{r child="04_results.Rmd", eval=TRUE}
 ```
 
 
