--- a/results/00_dmethr_poster.Rmd
+++ b/results/00_dmethr_poster.Rmd
@@ -138,10 +138,10 @@ abline(h=sum(rownames(data)=="poor")/nrow(data), col="white")
  
 **Clustering of features according to CpG density of genomic region surrounding the transcription start site (TSS).**
 For each feature we compute the CpG density of the TSS +/-`r ud_str/1000`kb region by counting the number of CG motifs in the DNA sequence divided by the length of the sequence. 
-**(A)** - The distribution of CpG dentities for TSS centered features shows 2 populations (black curve), whereas the distribution of CpG density of 1000 random genomic regions of `r 2*ud_str/1000`kb (blue curve) shows 1 population. The feature population with the lowest CpG densities are  *CpG poor* features, by opposition to the second population which are *CpG rich* feature.This analysis confirms that a large subset of TSS centered features are CpG rich. In order to separate these two populations of TSS centered features we i) perform a PCA on the features and ii) apply an EM-clustering algorithm on the first principal component. 
+**(A)** The distribution of CpG dentities for TSS centered features shows 2 populations (black curve), whereas the distribution of CpG density of 1000 random genomic regions of `r 2*ud_str/1000`kb (blue curve) shows 1 population. The feature population with the lowest CpG densities are  *CpG poor* features, by opposition to the second population which are *CpG rich* feature.This analysis confirms that a large subset of TSS centered features are CpG rich. In order to separate these two populations of TSS centered features we i) perform a PCA on the features and ii) apply an EM-clustering algorithm on the first principal component. 
 To perfom PCA on features we split genomic region of TSS +/- `r ud_str/1000`kb into `r stp/1000`kb bins. We compute the CpG density of each bin, then we obtain a CpG density matrix of `r nrow(mat)` features and `r ncol(mat)` bins. 
-**(B)** - The two CpG dendity clusters were identified by using  an esperance maximisation clustering on first principal component of PCA which represent 36,9% of the variance. The main graphic shows this clustering with first principal component on x axis and second principal component on y axis, red dots are CpG rich and black dots are CpG poor. The marginal graphics respectively show (same color code of main graphic) i) on the top: first principal component distribution of the two clusters (dotted grey vertical line represent the threshold between two clusters), ii) on the right second principal component distribution for the same clusters. 
-**(C)** - The average CpG density profile of the `r length(idx_rich)` CpG rich features (resp. `r length(idx_poor)` CpG poor features) cluster is plotted in red (resp. in black) as a function of the position on the sequence around the TSS (x axis) and CpG density (y axis). 
+**(B)** The two CpG dendity clusters were identified by using  an esperance maximisation clustering on first principal component of PCA which represent 36,9% of the variance. The main graphic shows this clustering with first principal component on x axis and second principal component on y axis, red dots are CpG rich and black dots are CpG poor. The marginal graphics respectively show (same color code of main graphic) i) on the top: first principal component distribution of the two clusters (dotted grey vertical line represent the threshold between two clusters), ii) on the right second principal component distribution for the same clusters. 
+**(C)** The average CpG density profile of the `r length(idx_rich)` CpG rich features (resp. `r length(idx_poor)` CpG poor features) cluster is plotted in red (resp. in black) as a function of the position on the sequence around the TSS (x axis) and CpG density (y axis). 
 **(D)** Heatmap showing the methylation profile of the TSS+/-2.5kb of 500 random genes grouped by their CpG density status.
 
 
